--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ python:
     - 3.4
     - 3.5
 script:
-    python -m unittest discover tests
+    python -m unittest discover tests &&
     python -m doctest timd/measure.py
